# pedrinho-rinhadebackend-2024

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  logs.txt  nginx.conf
database/: init.sql  postgresql.conf
src/: main.rs  repo.rs
