[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = {version ="0.4.34", features = ["serde"]}
log = "0.4.20"
serde = {version ="1.0.197", features = ["derive"]}
serde_json = "1.0.114"
sqlx = {version ="0.7.3", features = ["postgres", "runtime-tokio", "chrono", "macros"]}
tokio = {version ="1.36.0", features = ["full"]}
